--- a/git2.html
+++ b/git2.html
@@ -9,10 +9,8 @@
 <body>
     <h1> Hej Hej</h1>
     <p>to Ja</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum eos, quaerat harum ab itaque expedita amet, voluptate fuga impedit optio labore cumque molestiae ad distinctio. Voluptate tempora itaque ipsam. Odit?
-
-    </p>
+    <p> xxxxxxx</p>
     <p>akapit</p>
-    
+
 </body>
 </html>
